k8s/002_nana_full_tutorial/004_ingress/myapp-ingress-subdomains.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-virtual-host-ingress
spec:
  rules:
  - host: analytics.myapp.com
    http:
      paths:
      - backend:
          serviceName: analytics-service
          servicePort: 3000
  - host: analytics.myapp.com
    http:
      paths:
      - backend:
          serviceName: shopping-service
          servicePort: 8080
